--- a/src/Card.css
+++ b/src/Card.css
@@ -1,9 +1,9 @@
 .memory > .card {
     font-size: 2em;
-    flex: 1 1 calc(100% / 6 - 0.4em);
+    /*flex: 1 1 calc(100% / 6 - 0.4em);*/
     outline: 0.08em solid silver;
-    margin: 0.2em;
-    display: flex;
+    /*margin: 0.2em;
+    display: flex;*/
     cursor: default;
   }
   
