--- a/src/MemoryCard.css
+++ b/src/MemoryCard.css
@@ -1,10 +1,7 @@
 .memory > .card {
-    font-size: 2em;
-    /*flex: 1 1 calc(100% / 6 - 0.4em);*/
     outline: 0.08em solid silver;
-    /*margin: 0.2em;
-    display: flex;*/
     cursor: default;
+    text-align: center;
   }
   
   .memory > .card.hidden {
